src/components/About/style.css
#about{
	width:calc(100% - 100px);
	padding-top:20px;
	position:relative;
	border-right:2px solid #3C4586;
	font-size:18px;
	min-height: calc(100vh - 190px);
	overflow-y:scroll;
	height:calc(100vh - 188px);
}

#about img{
	width:100%;
	max-width: 500px;
	display: block;
	margin: 0px auto 0;
	border: 2px solid #3C4586;
	border-top: 1px solid #3C4586;
}
#about p{
    max-width: 1000px;
	display: block;
	margin:0 auto;
	padding:10px;
	width:100%;
	vertical-align: top;

}
.about-mobile-trigger{
	position: fixed;
	display: none;
	top:15px;
	font-size:18px;
	right:15px;
}
#close-about{

}

@media(max-width: 768px){
	.about-mobile-trigger{
		display: block;
		z-index: 99;

	}
	#close-about{
		position:fixed;
		display: block;
		top:70px;
		transform:scaleX(1.5);
		right:20px;
	}
	#about{
		background:#F2F0E9;
	/*	position: fixed;*/
		top:50px;
		left:0;
		width:calc(100vw - 80px);
		height:100vh;
		padding:40px;
		padding-bottom:100px;
	}
	#about img{
		border:2px solid #3C4586;
		width:100%;
	}
	#about p{
		display: block;
		width: 100%;
	}

	#about.open{
		display: block;
	}
	
}

